# langchain_learning

./: .gitignore  pyproject.toml
1_chat_model/: 1_chat_model_basic.py  2_chat_model_conv.py  3_chat_model_real_time_conv.py
2_prompt_template/: 1_prompt_template_basics.py  2_prompt_tem_adv.py
3_chains/: 1_chains.py  2_chains_runnable_extended.py  3_chains_parallel  4_chains_branching.py
4_rag/: 1a_rag_basic.py  1b_rag_basic.py  2a_rag_basic.py  2b_rag_basic.py  3a_rag_basic_retrieval.py  4a_rag_one_off_question.py  5_rag_basic_conversation.py  6a_rag_webcrawling.py  pdf_ingest.py
4_rag/books/: od.txt
4_rag/db/chroma_db/: chroma.sqlite3
4_rag/db/chroma_db_metadata/: chroma.sqlite3
4_rag/db/chroma_db_metadata_pdf/: chroma.sqlite3
4_rag/db/chroma_db_web/: chroma.sqlite3
4_rag/db/chroma_db_with_metadata/: chroma.sqlite3
5_agents_tools/: agents_basics.py
lamaindex/: 1st.py
langsmith_project/: 1_basic.py  2_small_pro.py
smolagents/: 1st.py  2nd.py  LiteLLMMode.py
