[project]
name = "langchain-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "sahilshukla302003",email = "148991684+sahilshukla302003@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-openai (>=1.0.1,<2.0.0)",
    "langchain-google-genai (>=3.0.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
